[package]
edition = "2021"
name = "little-guy"
version = "0.1.0"
license = "MIT"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

rtt-target = "0.6.1"
# defmt = "1"
# defmt-rtt = "1"
# panic-probe = { version = "1", features = ["print-defmt"] }
panic-probe = { version = "1" }

rp2040-hal = { version="0.11", features=["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3"


